@@ -42,6 +42,7 @@ __author__ = 'David Townshend'
 
 from ._table import Table
 from ._field import Field, Join, NotSet
+from ._index import Index
 from ._query import query, Query
 from ._database import Database
 from ._except import NormanWarning, NormanError, ConsistencyError, ValidationError
