@@ -6,7 +6,7 @@ This file lists new features and major changes to **Norman**.  For a detailed
 changelog, see the mercurial log.
 
 
-Norman-0.6.3
+Norman-0.7.0
 ------------
 
 *Release Date: Not yet released*
@@ -16,7 +16,8 @@ Norman-0.6.3
 -   Add a new `~serialise.CSV` serialiser.
 -   Add an *autoindex* class attribute to `Field` objects.
 -   Add `validate.map` validator to convert values.
-
+-   Improved the implementation of indexes.  This results in several major
+    internal changes.
 
 Norman-0.6.2
 ------------
